--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -1,47 +1,50 @@
-d .headline {
-	font-size: 1.9rem;
-	font-weight: 300;
-	color: $mainBlue;
+.headline {
+  font-size: 1.9rem;
+  font-weight: 300;
+  color: $mainBlue;
 
-	@mixin atSmall {
-		font-size: 2.875rem;
-	}
+  @mixin atSmall {
+    font-size: 2.875rem;
+  }
 
-	&--centered {
-		text-align: center;
-	}
+  &--centered {
+    text-align: center;
+  }
 
-	&--orange {
-		color: $mainOragne;
-	}
+  &--orange {
+    color: $mainOrange;
+  }
 
-	&--small {
-		font-size: 1.2rem;
+  &--small {
+    font-size: 1.2rem;
+    @mixin atSmall {
+      font-size: 1.875rem;
+    }
+  }
 
-		@mixin atSmall {
-			font-size: 1.875rem;
-		}
-	}
+  &--narrow {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-	&--narrow {
-		max-width: 500px;
-		margin-right: auto;
-		margin-left: auto;
-	}
+  &--light {
+    font-weight: 100;
+  }
 
-	&--light {
-		font-weight: 100;
-	}
+  strong {
+    font-weight: 400;
+  }
 
-	&--b-margin-small {
-		font-weight: .5em;
-	}
+  &--b-margin-small {
+    margin-bottom: .5em;
+  }
 
-	&--b-margin-large {
-		font-weight: 1.6em;
-	}
+  &--b-margin-large {
+    margin-bottom: 1.6em;
+  }
 
-	&--no-t-margin {
-		margin-top: 0;
-	}
+  &--no-t-margin {
+    margin-top: 0;
+  }
 }
